rearranging alignment of sections to ensure they centered in the middle of the site

--- a/src/styles/Hero.module.css
+++ b/src/styles/Hero.module.css
@@ -42,6 +42,7 @@
   justify-self: end; 
   width: 100%;
   max-width: 500px;
+  margin-top: 60 px;
 }
 
 .retroTerminalWindow {
